# python-service-libs

./: .gitignore  README.md  pyproject.toml
examples/: demo_audit_and_kafka.py  demo_observability.py  demo_serializers.py  demo_utils.py  test_demo_fixtures.py
src/iot_hub_shared/audit_kit/: __init__.py  publisher.py
src/iot_hub_shared/auth_kit/: __init__.py  exceptions.py  middleware.py  models.py  validator.py
src/iot_hub_shared/kafka_kit/: __init__.py  config.py  consumer.py  handlers.py  metrics.py  producer.py
src/iot_hub_shared/observability_kit/: __init__.py  context.py  filters.py  logging.py  metrics.py  middleware.py
src/iot_hub_shared/serializer_kit/: __init__.py  base_serializer.py  base_validator.py  json_serializer.py
src/iot_hub_shared/test_kit/: __init__.py  audit.py  auth.py  conftest.py  kafka.py  prometheus.py
src/iot_hub_shared/utils_kit/: __init__.py  dicts.py  normalization.py
tests/: conftest.py  test_audit_kit.py  test_auth_kit.py  test_kafka_kit.py  test_observability_kit.py  test_serializer_kit.py  test_utils_kit.py
